--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -37,18 +37,17 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav  ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#/portal">Portal</a>
+        <a class="nav-link" href="/portal">Portal</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#/about">About</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#/contact">Contact</a>
+        <a class="nav-link" href="/contact">Contact</a>
       </li>
     </ul>
   </div>
 </nav>
-  <base href="/">
   <app-root></app-root>
 </body>
 </html>
