--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -6,13 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/img/portal.png">
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="/assets/css/master.css">
 
   <!-- For Fancy Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
 
   <!--Implementing Bootstrap CSS and Javascript-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
@@ -26,7 +27,7 @@
 <!-- navigation bar -->
 <nav class="navbar navbar-expand-md sm-light">
   <!-- Brand -->
-  <a class="navbar-brand" href="#"><img  alt="Logo" style="width:40px;" src="/assets/img/portal.png"></a>
+  <a class="navbar-brand berkshire" href="#">Portal</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
