--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -3,14 +3,64 @@
 
 
 <base href="/">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Portal</title>
+
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <link rel="icon" type="image/x-icon" href="/assets/img/portal.png">
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="/assets/css/custom.css">
+
+  <!-- For Fancy Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
+
+  <!--Implementing Bootstrap CSS and CSS Main-->
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
+  <!-- Font Awesome CSS-->
+  <link rel="stylesheet" href="/assets/vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+  <!-- owl carousel-->
+  <link rel="stylesheet" href="/assets/vendor/owl.carousel/assets/owl.carousel.css">
+  <link rel="stylesheet" href="/assets/vendor/owl.carousel/assets/owl.theme.default.css">
+  <!-- theme stylesheet-->
+  <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+</head>
+<body>
+
+
+<div class="container-fluid">
+
   <app-root></app-root>
+
+  </div>
 </body>
 <!-- Javascript files-->
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"> </script>
-<script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/assets/vendor/admin/bootstrap/js/bootstrap.min.js"></script>
 <script src="/assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
 <script src="/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 <script src="/assets/js/front.js"></script>
-
+<script src="/assets/vendor/admin/chart.js/Chart.min.js"></script>
+<script src="/assets/js/admin/charts-home.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"> </script>
+   <script src="/assets/vendor/admin/bootstrap/js/bootstrap.min.js"></script>
+   <script src="/assets/vendor/admin/jquery.cookie/jquery.cookie.js"> </script>
+   <script src="/assets/vendor/admin/chart.js/Chart.min.js"></script>
+   <script src="/assets/js/admin/charts-home.js"></script>
+   <script src="/assets/js/admin/front.js"></script>
+   <script src="/assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
+   <script src="/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+   <script src="/assets/js/front.js"></script>
 </html>
